# RL-Harness

./: .gitignore  .rayignore  AGENTS.md  README.md  pyproject.toml
.cursor/: Dockerfile  environment.json
analysis/: AGENTS.md  __init__.py  checkpoints.py  plots.py  probe.py  rollouts.py
analysis/probes/: __init__.py  linear.py  transducer.py
blueprints/: base.py  mess3_arms.py
devops/: __init__.py
devops/vast/: README.md  (+11 more)
docs/: artifact_storage.md  checkpoint_strategy.md  coding_agent_refactor_prompt.md  env_architecture.md  generic_harness_overview.md  generic_harness_refactor.md  iqn_value.md  multi_repo.md  seed_streams.md  transducer_probing.md  vast_integration_plan.md
envs/: AGENTS.md  __init__.py
experiments/: AGENTS.md  __init__.py
harness/: AGENTS.md  __init__.py  artifacts.py  cli.py  context.py  hardware.py  runners.py  seeding.py
learners/: AGENTS.md  __init__.py  optimizer.py  ppo.py  ppo_iqn.py  ppo_qr.py
losses/: AGENTS.md  __init__.py  next_token.py  quantile.py  quantile_huber.py
scripts/: AGENTS.md  bench_4090.sh  eval_scrambled_input.py  hardware.py  phase1_findings.py  phase1_gate.py  phase2_findings.py  phase2_passive_probe.py  phase3_findings.py  phase4_nulls.py  phase5_gate.py  probe_arm.py  probe_ckpt_fig.py  run_lane.sh  train.py
tests/: __init__.py  test_analysis.py  test_architecture.py  test_experiments.py  test_harness.py  test_hmm_env.py  test_infra_safeguards.py  test_integration.py  test_iqn.py  test_loss_composition.py  test_mess3_occupancy_control.py  test_model_composition.py  test_optimizer.py  test_qr_value.py  test_rlmodules.py  test_storage.py
(+751 files in other folders)
