[project]
name = "rllib-harnes-beta"
version = "0.1.0"
description = "RLLibHarnesBeta — local RLlib harness for custom RL experiments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "ray[rllib]==2.56.0",
    "torch==2.12.1",
    "matplotlib>=3.9",
    "scipy>=1.18.0",
]

[tool.pytest.ini_options]
markers = ["slow: long-running tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
