[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-harness"
version = "0.1.0"
description = "Shared RLlib research library (harness, learners, losses, envs, analysis, devops)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "ray[rllib]==2.56.0",
    "torch==2.12.1",
    "matplotlib>=3.9",
    "scipy>=1.18.0",
]

[project.optional-dependencies]
storage = [
    "boto3>=1.35",
]

[project.scripts]
rl-harness = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "analysis*",
    "devops*",
    "envs*",
    "harness*",
    "learners*",
    "losses*",
]
exclude = ["envs.hmm.tests*", "envs.mess3.tests*"]
namespaces = true

[tool.pytest.ini_options]
markers = ["slow: long-running tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
# Local Mac dev tooling for renting/bootstrapping vast.ai boxes. Kept out of the
# training env (never installed on the boxes) — run via `uv run --group devops`.
devops = [
    "vastai>=0.2.0",
]
